Functional 1s fade between clips